# P3D

./: .gitignore  CMakeLists.txt
data/: test.yml
data/cameraCalibration/: cam1.yml  cam2.yml  test.yml
data/cameraConfig/: cam1.xml  cam2.xml  test.xml
p3d/: CMakeLists.txt  UseEmbeddedP3d.cmake
p3d/Calibration/: calibrateNiKinect.cpp  calibrateNiKinect.h  chessboard.cpp  chessboard.h
p3d/Camera/: multiNiKinect.cpp  multiNiKinect.h  niKinect.cpp  niKinect.h
p3d/Configuration/: niKinectConfiguration.cpp  niKinectConfiguration.h
p3d/CoordinateSpace/: baseCoordinateSpace.cpp  baseCoordinateSpace.h  cameraCoordinateSpace.cpp  cameraCoordinateSpace.h
p3d/Registration/: Align.h
p3d/Utility/: pcl_utility.cpp  pcl_utility.h
p3d/nestk/: CMakeLists.txt  UseNestk.cmake.in
p3d/nestk/ntk/: CMakeLists.txt
p3d/nestk/ntk/camera/: calibration.cpp  multiple_grabber.cpp  multiple_grabber.h  openni_grabber.h  rgbd_grabber.h
p3d/nestk/ntk/mesh/: pcl_utils.cpp  pcl_utils.h  pcl_utils.hpp
project/: CMakeLists.txt  adjustAngle.cpp  board.cpp  calibrate.cpp  calibrateMultipleKinects.cpp  createNiKinectXMLFile.cpp  icp.cpp  ndt.cpp  ndt_live.cpp  pm.cpp  pm3.cpp  pmain.cpp  pmain2.cpp
