
INCLUDE(../${P3D_EMBEDDED_USE_FILE})

ADD_EXECUTABLE(pmain pmain.cpp)
ADD_EXECUTABLE(pmain2 pmain2.cpp)
ADD_EXECUTABLE(pm pm.cpp)
ADD_EXECUTABLE(icp icp.cpp)
ADD_EXECUTABLE(ndt ndt.cpp)
ADD_EXECUTABLE(ndt_live ndt_live.cpp)
ADD_EXECUTABLE(pm3 pm3.cpp)
ADD_EXECUTABLE(adjustAngle adjustAngle.cpp)
ADD_EXECUTABLE(calibrate calibrate.cpp)
ADD_EXECUTABLE(board board.cpp)
ADD_EXECUTABLE(createNiXMLFile createNiKinectXMLFile.cpp)
ADD_EXECUTABLE(calibrateMultipleKinects calibrateMultipleKinects.cpp)
TARGET_LINK_LIBRARIES(pmain p3d)
TARGET_LINK_LIBRARIES(pm3 p3d)
TARGET_LINK_LIBRARIES(pm p3d)
TARGET_LINK_LIBRARIES(icp p3d)
TARGET_LINK_LIBRARIES(ndt p3d)
TARGET_LINK_LIBRARIES(ndt_live p3d)
TARGET_LINK_LIBRARIES(pmain2 p3d)
TARGET_LINK_LIBRARIES(board p3d)
TARGET_LINK_LIBRARIES(adjustAngle p3d)
TARGET_LINK_LIBRARIES(calibrate  p3d)
TARGET_LINK_LIBRARIES(createNiXMLFile p3d)
TARGET_LINK_LIBRARIES(calibrateMultipleKinects p3d)
